# quickcheck-classes

./: .gitignore  LICENSE  README.md  build  cabal.project  changelog.md  default.nix  nix-ci-ish  quickcheck-classes.cabal  release.nix  shell.nix  stack.yaml
.github/workflows/: haskell.yaml
nix/haskell/: semirings.nix
projects/: ghc-7-10-3-no-semigroupoids.project  ghc-7-10-3-transformers-0-4-1-0.project  ghc-7-10-3-transformers-0-5-5-0.project  ghc-7-10-3-transformers-0-5-containers-0-6-quickcheck-2-12.project  ghc-7-4-2-transformers-0-4-1-0.project  ghc-7-8-4-transformers-0-3-0-0.project  ghc-7-8-4-transformers-0-3-containers-0-5-9.project  ghc-8-4-3-containers-0-6-quickcheck-2-9.project  ghc-8-4-3-no-semigroupoids.project
quickcheck-classes/: .travis.yml  changelog.md  quickcheck-classes.cabal
quickcheck-classes-base/: .travis.yml  changelog.md  quickcheck-classes-base.cabal
quickcheck-classes-base/src/Test/QuickCheck/Classes/: Alternative.hs  Applicative.hs  Arrow.hs  Base.hs  Bifoldable.hs  Bifunctor.hs  Bitraversable.hs  Bits.hs  Category.hs  Common.hs  Compat.hs  Contravariant.hs  Enum.hs  Eq.hs  Foldable.hs  Functor.hs  Generic.hs  Integral.hs  Internal.hs  Ix.hs  Monad.hs  MonadFail.hs  MonadPlus.hs  MonadZip.hs  Monoid.hs  Num.hs  Ord.hs  Semigroup.hs  Show.hs  ShowRead.hs  Storable.hs  Traversable.hs
quickcheck-classes-base/src/Test/QuickCheck/Classes/Base/: IsList.hs
quickcheck-classes/src/Test/QuickCheck/: Classes.hs
quickcheck-classes/src/Test/QuickCheck/Classes/: Alt.hs  Apply.hs  Common.hs  Euclidean.hs  IsList.hs  Json.hs  MVector.hs  Plus.hs  Prim.hs  Ring.hs  Semigroupoid.hs  Semiring.hs
quickcheck-classes/test/: Spec.hs
quickcheck-classes/test/Spec/: ShowRead.hs
src/Test/QuickCheck/: Classes.hs
src/Test/QuickCheck/Classes/: Alt.hs  Alternative.hs  Applicative.hs  Apply.hs  Arrow.hs  Bifoldable.hs  Bifunctor.hs  Bitraversable.hs  Bits.hs  Category.hs  Common.hs  Compat.hs  Contravariant.hs  Enum.hs  Eq.hs  Euclidean.hs  Foldable.hs  Functor.hs  Generic.hs  Integral.hs  IsList.hs  Json.hs  MVector.hs  Monad.hs  MonadFail.hs  MonadFix.hs  MonadIO.hs  MonadPlus.hs  MonadZip.hs  Monoid.hs  Ord.hs  Plus.hs  Prim.hs  Proxy.hs  Ring.hs  Semigroup.hs  Semigroupoid.hs  Semiring.hs  Show.hs  ShowRead.hs  (+2 more)
src/Test/QuickCheck/Classes/Common/: Ground.hs
test/: Advanced.hs  Spec.hs
test/Spec/: ShowRead.hs
