name: quickcheck-classes
version: 0.3.1
synopsis: QuickCheck common typeclasses
description:
  This library provides quickcheck properties to
  ensure that typeclass instances the set of laws that they are
  supposed to. There are other libraries that do similar
  things, such as `genvalidity-hspec` and `checkers`. This
  library differs from other solutions by not introducing
  any new typeclasses that the user needs to learn. The source
  code for this library should be easy to understand if you
  are already familiar with quickcheck. Open an issue
  if you feel that this is not the case.
homepage: https://github.com/andrewthad/quickcheck-classes#readme
license: BSD3
license-file: LICENSE
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2017 Andrew Martin
category: Testing
build-type: Simple
extra-source-files: README.md
cabal-version: >=1.10

library
  hs-source-dirs: src
  exposed-modules:
    Test.QuickCheck.Classes
  build-depends:
      base >= 4.7 && < 5
    , QuickCheck
    , transformers
    , primitive
    , prim-array
    , aeson
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
      base
    , quickcheck-classes
    , QuickCheck
    , primitive
    , aeson
    , vector
  default-language: Haskell2010

source-repository head
  type: git
  location: https://github.com/andrewthad/quickcheck-classes
